--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "chart.js": "^4.2.1",
     "firebase": "^9.19.1",
+    "framer-motion": "^10.11.6",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
-    "sort-by": "^1.2.0"
+    "sort-by": "^1.2.0",
+    "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
